fix: Aksesibilitas website

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -1,6 +1,11 @@
 #hamburger {
     text-decoration: none;
     padding: 0px;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     line-height: 0;
     border: none;
     background-color: #fff;
@@ -17,6 +22,11 @@
     right: 32px;
     top: 24px;
     padding: 0;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @media screen and (min-width: 768px) {
         display: none;
