--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -56,7 +56,7 @@
             object-fit: cover;
             border-radius: 16px 0px;
             padding-right: 5px;
-            background-color: #ACBA0A;
+            background-color: #e9e9e9;
         }
 
         &__city {
