--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Delicious">
+    <meta name="apple-mobile-web-app-title" content="Delicious">
+    <meta name="msapplication-starturl" content="/index.html">
+    <meta name="theme-color" content="#E55353" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 
     <title>Delicious App</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
