--- a/src/scripts/styles/_jumbotron.scss
+++ b/src/scripts/styles/_jumbotron.scss
@@ -5,7 +5,7 @@
     min-height: 380px;
     width: 100%;
     text-align: center;
-    background: url('../public/images/heros/hero-image_2.jpg');
+    background: url('../../public/images/heros/hero-image_2.jpg');
     background-position: center;
     background-color: rgb(189, 189, 189);
     background-attachment: fixed;
