--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -64,15 +64,8 @@
     </div>
     <div id="navBackground"></div>
 
-    <main id="maincontent">
-        <section class="best-pick" aria-label="Konten Utama">
-            <h2 class="best-pick__label">
-                <span>Best</span>
-                <span>Pick</span>
-            </h2>
-            <div class="posts" id="renderPosts">
-            </div>
-        </section>
+    <main id="mainContent">
+
     </main>
     <footer>
         <div class="copyright">
