refaktor: add datail link

--- a/src/scripts/styles/_post.scss
+++ b/src/scripts/styles/_post.scss
@@ -91,6 +91,11 @@
             font-weight: 600;
             font-size: 18px;
             margin-top: 6px;
+            
+            a{
+                color: #15B7B9;
+                text-decoration: none;
+            }
         }
 
         &__description {
