--- a/src/scripts/styles/_loader.scss
+++ b/src/scripts/styles/_loader.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 100px;
     >span{
         color: #E55353;
     }
