--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,7 +27,9 @@
 
     <header class="header">
         <div class="header__inner">
-            <img src="./images/logos/logo.svg" alt="Logo Delicious" class="header__logo">
+            <a href="/#">
+                <img src="./images/logos/logo.svg" alt="Logo Delicious" class="header__logo">
+            </a>
 
             <button type="button" id="hamburger">
                 <i class="fas fa-bars fa-2x"></i>
@@ -43,7 +45,7 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#">
+                        <a href="/#/favorite">
                             Favorite
                         </a>
                     </li>
