--- a/src/scripts/styles/_post.scss
+++ b/src/scripts/styles/_post.scss
@@ -38,7 +38,7 @@
         grid-template-columns: 1fr 1fr 1fr;
         max-width: 1200px;
         margin: 0 auto;
-        margin-bottom: 48px;
+        padding-bottom: 88px;
     }
 
     .post-item {
