fix anchor dimension min 44x44

--- a/src/scripts/styles/_post.scss
+++ b/src/scripts/styles/_post.scss
@@ -100,6 +100,9 @@
             a{
                 color: #15B7B9;
                 text-decoration: none;
+                height: 44px;
+                display: block;
+                line-height: 44px;
             }
         }
 
