--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- skip to content if user using tab in first load  -->
-    <a href="#maincontent" class="skip-link">Menuju ke konten utama</a>
+    <a href="#mainContent" class="skip-link">Menuju ke konten utama</a>
 
     <header class="header">
         <div class="header__inner">
