--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 
     <title>Delicious App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
-        type="text/css">
+    <link async href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
+        type="text/css" >
     <script async src="https://kit.fontawesome.com/f5e4bb16ed.js" crossorigin="anonymous"></script>
 </head>
 
