--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 
     <title>Delicious App</title>
-    <link async href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
         type="text/css" >
     <script async src="https://kit.fontawesome.com/f5e4bb16ed.js" crossorigin="anonymous"></script>
 </head>
@@ -31,7 +31,7 @@
                 <img src="./images/logos/logo.svg" alt="Logo Delicious" class="header__logo">
             </a>
 
-            <button type="button" id="hamburger">
+            <button type="button" id="hamburger" aria-label="Lihat Menu">
                 <i class="fas fa-bars fa-2x"></i>
             </button>
             <nav id="drawer" class="nav">
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="https://www.linkedin.com/in/aldhyyy" target="_blank">
+                        <a rel="noreferrer" href="https://www.linkedin.com/in/aldhyyy" target="_blank">
                             About Us
                         </a>
                     </li>
