--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,6 +15,15 @@
     <meta name="theme-color" content="#E55353" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 
+    <meta name="title" content="https://laper.netlify.app/">
+    <meta name="description" content="Temukan restoran dan kafe kesukaan kamu">
+    <meta name="keywords" content="restoran, kafe, makan, minum">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="14 days">
+    <meta name="author" content="aldhyyy">
+
     <title>Delicious App</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
         type="text/css" >
