--- a/src/scripts/styles/_jumbotron.scss
+++ b/src/scripts/styles/_jumbotron.scss
@@ -2,6 +2,7 @@
 .hero {
     display: flex;
     align-items: center;
+    height: 380px;
     min-height: 380px;
     width: 100%;
     text-align: center;
