--- a/src/scripts/styles/_post.scss
+++ b/src/scripts/styles/_post.scss
@@ -51,7 +51,9 @@
 
         &__thumbnail {
             width: 100%;
+            min-width: 100%;
             height: 250px;
+            min-height: 250px;
             object-fit: cover;
             border-radius: 16px 0px;
             padding-right: 5px;
