google font optimize

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
     <meta name="author" content="aldhyyy">
 
     <title>Delicious App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800" rel="stylesheet"
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800&display=swap" rel="stylesheet"
         type="text/css" >
     <script async src="https://kit.fontawesome.com/f5e4bb16ed.js" crossorigin="anonymous"></script>
 </head>
