--- a/src/scripts/styles/_post.scss
+++ b/src/scripts/styles/_post.scss
@@ -47,6 +47,14 @@
 
         &__header {
             position: relative;
+            &__poster{
+                 object-position: center;
+                 object-fit: cover;
+                 min-width: 100%;
+                 height: 250px;
+                 margin-bottom: 14px;
+
+            }
         }
 
         &__thumbnail {
@@ -145,4 +153,11 @@
             }
         }
     }
+}
+
+.skeleton {
+    user-select: none;
+    background-color: #eeeeee;
+    color: #eeeeee !important;
+    border-radius: 5px;
 }
