--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,8 +25,7 @@
     <meta name="author" content="aldhyyy">
 
     <title>Delicious App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800&display=swap" rel="stylesheet"
-        type="text/css" >
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800&display=swap" rel="stylesheet">
     <script async src="https://kit.fontawesome.com/f5e4bb16ed.js" crossorigin="anonymous"></script>
 </head>
 
@@ -44,7 +43,7 @@
                 <i class="fas fa-bars fa-2x"></i>
             </button>
             <nav id="drawer" class="nav">
-                <button type="button" id="closeHamburger">
+                <button type="button" id="closeHamburger" aria-label="Tutup Menu">
                     <i class="fa fa-close fa-2x"></i>
                 </button>
                 <ul class="nav__list">
